--- a/Storm/Topology/pom.xml
+++ b/Storm/Topology/pom.xml
@@ -37,5 +37,12 @@
             <artifactId>commons-csv</artifactId>
             <version>1.5</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.5</version>
+        </dependency>
+
     </dependencies>
 </project>
