--- a/Storm/Topology/src/main/resources/Config.properties
+++ b/Storm/Topology/src/main/resources/Config.properties
@@ -1,5 +1,5 @@
 eventhubspout.username = admin
-eventhubspout.password = j5G5IPCNdZc+IZtmhAcxD+JFJps8+dnobx9PEtQ4lo8=
+eventhubspout.password = GhOjcF5nsJEmNCZ0V8SEeYTpj2PzWR6dtB/tGsocjao=
 eventhubspout.namespace = gdeltns
 eventhubspout.entitypath = gdelt
 eventhubspout.partitions.count = 8
@@ -12,3 +12,9 @@ eventhubspout.checkpoint.interval = 10
 eventhub.receiver.credits = 1
 
 powerbi.push.url = https://api.powerbi.com/beta/413504eb-8622-47d2-aa72-ddbba4584471/datasets/c1d76dd4-504e-4871-b58f-8d21d70d5795/rows?key=OJZBZr%2Befz3phQ1YJK6ngT37GdOGNn3FwHu3ctlpAtYviOD2Gbu2ADbIR%2BAcNpwaVkntSkeHSJarpjAZGX0%2BNw%3D%3D
+
+# Hbase cluster details
+hbase.restEndPoint = https://hbaseforgdelt.azurehdinsight.net/hbaserest
+hbase.userName = admin
+hbase.password = BigData2018
+hbase.tableName = gdelt
