Lots of refactoring, simplification and replacing JSON library

--- a/Storm/Topology/src/main/resources/Config.properties
+++ b/Storm/Topology/src/main/resources/Config.properties
@@ -1,19 +1,19 @@
+# Event hub settings
 eventhubspout.username = admin
-eventhubspout.password = GhOjcF5nsJEmNCZ0V8SEeYTpj2PzWR6dtB/tGsocjao=
+eventhubspout.password = Put6SCL90r/V4C7lmsOlY/SDIkLnfbLByigdoIJXDV0=
 eventhubspout.namespace = gdeltns
 eventhubspout.entitypath = gdelt
 eventhubspout.partitions.count = 8
-
 # if not provided, will use storm's zookeeper settings
 zookeeper.connectionstring =
 eventhubspout.checkpoint.interval = 10
-
 #how many events are batched before releasing them to the Storm pipeline
 eventhub.receiver.credits = 1
 
+#Power BI settings
 powerbi.push.url = https://api.powerbi.com/beta/413504eb-8622-47d2-aa72-ddbba4584471/datasets/c1d76dd4-504e-4871-b58f-8d21d70d5795/rows?key=OJZBZr%2Befz3phQ1YJK6ngT37GdOGNn3FwHu3ctlpAtYviOD2Gbu2ADbIR%2BAcNpwaVkntSkeHSJarpjAZGX0%2BNw%3D%3D
 
-# Hbase cluster details
+# Hbase cluster settings
 hbase.restEndPoint = https://hbaseforgdelt.azurehdinsight.net/hbaserest
 hbase.userName = admin
 hbase.password = BigData2018
