--- a/Storm/Topology/pom.xml
+++ b/Storm/Topology/pom.xml
@@ -37,5 +37,10 @@
             <artifactId>commons-csv</artifactId>
             <version>1.5</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.6.5</version>
+        </dependency>
     </dependencies>
 </project>
